# LockbaseELI

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  todo.md
Frontend/: package.json  tsconfig.json
Frontend/src/: App.js
Frontend/src/components/: DateTimeSelection.tsx  Home.jsx  InfoBox.jsx  Sankey.tsx
Frontend/src/services/: BackendAdapter.js
Frontend/src/translations/: de.json  en.json  es.json  fr.json  it.json
backend/: .editorconfig  Backend.sln  LockbaseELI.sln  common.targets
backend/coredomain/: AtomicValue.cs  CheckAccess.cs  Either.cs  Entity.cs  EnumerableExtensions.cs  ImmutableExtensions.cs  StringExtensions.cs  coredomain.csproj
backend/coredomain/Aggregates/: LockSystem.cs
backend/coredomain/Contracts/: IDateProvider.cs
backend/coredomain/Entities/: AccessPolicy.cs  Event.cs  Key.cs  Lock.cs
backend/coredomain/Enumerations/: EventType.cs  TimeInterval.cs
backend/coredomain/Extensions/: DateTimeExtensions.cs  EnumerableExtensions.cs  ImmutableExtensions.cs  IntExtensions.cs  StringExtensions.cs
backend/coredomain/Services/: IMessageBusInteractor.cs  Id.cs  MessageBusInteractor.cs
backend/coredomain/ValueObjects/: DayOfWeekSpecified.cs  NumberOfLockings.cs  PolicyAssignment.cs  RecurrenceRule.cs  RecurrenceRuleDayOfMonth.cs  RecurrenceRuleDayOfPeriod.cs  RecurrenceRuleDayOfWeek.cs  RecurrenceRuleDayOfYear.cs  RecurrenceRuleTime.cs  Statement.cs  TimePeriodDefinition.cs
backend/tests/: UnitTest.csproj
backend/tests/CoreDomain/: AccessPolicyTest.cs  CheckAccessTest.cs  IdTest.cs  KeyTest.cs  LockSystemTest.cs  LockTest.cs  NumberOfLockingsTest.cs  RecurrenceRuleDayOfMonthTest.cs  RecurrenceRuleDayOfWeekTest.cs  RecurrenceRuleDayOfYear.cs  RecurrenceRuleTimeTest.cs  TimePeriodDefinitionTest.cs
backend/tests/Services/: MessageBuilder.cs  MessageBusInteractorTest.cs
backend/ui/: .gitignore  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json  electron.manifest.json  global.json  omnisharp.json  ui.csproj
backend/ui/Common/: BrokerConfig.cs  BrowserChannel.cs  EventBusExtensions.cs  MqttBackgroundServer.cs  MqttBackgroundService.cs  MqttBrokerService.cs  SignalrHub.cs
backend/ui/Controllers/: DataController.cs  TestController.cs
backend/ui/Models/: DoorInfo.cs  PersonInfo.cs
backend/ui/Pages/: Error.cshtml.cs
backend/ui/Resources/: DateTimeProvider.cs
backend/ui/sample/: ELIApp2Drv.txt
coredomain/: AtomicValue.cs  CheckAccess.cs  Either.cs  Entity.cs  EnumerableExtensions.cs  Enumeration.cs  coredomain.csproj
coredomain/Aggregates/: LockSystem.cs
coredomain/Entities/: AccessPolicy.cs  Key.cs  Lock.cs
coredomain/Enumerations/: TimeInterval.cs
coredomain/Services/: IMessageBusInteractor.cs  MessageBusInteractor.cs
coredomain/ValueObjects/: DayOfWeekSpecified.cs  PolicyAssignment.cs  RecurrenceRule.cs  RecurrenceRuleDayOfPeriod.cs  RecurrenceRuleDayOfWeek.cs  RecurrenceRuleTime.cs  RecurrenceRuleWeekDayOfMonth.cs  Statement.cs  TimePeriodDefinition.cs
doc/: floorplan.t2d  git-flow.md  licences.md  setup-toolchain.md  simple-sequence.uml
driver/: .editorconfig.txt  .gitignore  CMakeLists.prev.txt  CMakeLists.txt  VersionInfo.h  config.json  cross-build.ps1  driver.c  driver.h  jsmn.c  library.c  library.h  mac-build.sh  main.c  readme.md  session_list.c  session_list.h  utils.c  utils.h  win-build.ps1
sample/: LbwELI.Demo.cpp
sample/windows/: CMakeLists.txt
tests/: UnitTest.csproj
tests/CoreDomain/: CheckAccessTest.cs  KeyTest.cs  LockEntity.cs  LockSystemTest.cs  LockingDefinition.cs  NumberOfLockingsTest.cs  RecurrenceRule.cs  RecurrenceRuleDayOfWeekTest.cs  RecurrenceRuleDayOfYear.cs  RecurrenceRuleTimeTest.cs  TimePeriodDefinitionTest.cs
ui/: .editorconfig  .gitignore  Program.cs  Startup.cs  appsettings.json  ui.csproj
ui/ClientApp/: package-lock.json  package.json  tsconfig.json
ui/ClientApp/public/: index.html
ui/ClientApp/src/: App.js  index.css  index.js  index.scss
ui/ClientApp/src/components/: ColorInfoBox.jsx  Constants.jsx  DateTimeSelection.tsx  Door.jsx  DoorCaption.jsx  GroundPlan.jsx  GroundPlan.tsx  Home.js  Home.jsx  InfoBox.jsx  Layout.js  Layout.jsx  NavMenu.js
ui/ClientApp/src/services/: BackendAdapter.js
ui/ClientApp/src/store/: configureStore.js
ui/ClientApp/src/translations/: de.json  en.json  es.json  fr.json  it.json  messages.js
ui/Common/: BrokerConfig.cs  EventBusExtensions.cs  MqttBackgroundService.cs
ui/Common/EventBus/: IEventBusSubscriptionsManager.cs
ui/Common/EventBus/Abstractions/: IEventBus.cs  IIntegrationEventHandler.cs
ui/Common/EventBus/EventBusMQTT/: EventBusMQTT.cs
ui/Common/EventBus/Events/: IntegrationEvent.cs
ui/Controllers/: DataController.cs  SampleDataController.cs
ui/Models/: DoorInfo.cs  PersonInfo.cs
ui/Properties/: launchSettings.json
